ch13/sample1/y.output
语法

    0 $accept: S $end

    1 S: Stmt
    2  | S Stmt

    3 Stmt: T_Identifier '=' E ';'

    4 E: E '+' E
    5  | E '-' E
    6  | E '*' E
    7  | E '/' E
    8  | '-' E
    9  | T_IntConstant
   10  | T_Identifier
   11  | '(' E ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11
')' (41) 11
'*' (42) 6
'+' (43) 4
'-' (45) 5 8
'/' (47) 7
';' (59) 3
'=' (61) 3
error (256)
T_IntConstant (258) 9
T_Identifier (259) 3 10
U_neg (260)


Nonterminals, with rules where they appear

$accept (14)
    左： 0
S (15)
    左： 1 2, 右： 0 2
Stmt (16)
    左： 3, 右： 1 2
E (17)
    左： 4 5 6 7 8 9 10 11, 右： 3 4 5 6 7 8 11


State 0

    0 $accept: . S $end

    T_Identifier  shift, and go to state 1

    S     转到状态 2
    Stmt  转到状态 3


State 1

    3 Stmt: T_Identifier . '=' E ';'

    '='  shift, and go to state 4


State 2

    0 $accept: S . $end
    2 S: S . Stmt

    $end          shift, and go to state 5
    T_Identifier  shift, and go to state 1

    Stmt  转到状态 6


State 3

    1 S: Stmt .

    $default  reduce using rule 1 (S)


State 4

    3 Stmt: T_Identifier '=' . E ';'

    T_IntConstant  shift, and go to state 7
    T_Identifier   shift, and go to state 8
    '-'            shift, and go to state 9
    '('            shift, and go to state 10

    E  转到状态 11


State 5

    0 $accept: S $end .

    $default  接受


State 6

    2 S: S Stmt .

    $default  reduce using rule 2 (S)


State 7

    9 E: T_IntConstant .

    $default  reduce using rule 9 (E)


State 8

   10 E: T_Identifier .

    $default  reduce using rule 10 (E)


State 9

    8 E: '-' . E

    T_IntConstant  shift, and go to state 7
    T_Identifier   shift, and go to state 8
    '-'            shift, and go to state 9
    '('            shift, and go to state 10

    E  转到状态 12


State 10

   11 E: '(' . E ')'

    T_IntConstant  shift, and go to state 7
    T_Identifier   shift, and go to state 8
    '-'            shift, and go to state 9
    '('            shift, and go to state 10

    E  转到状态 13


State 11

    3 Stmt: T_Identifier '=' E . ';'
    4 E: E . '+' E
    5  | E . '-' E
    6  | E . '*' E
    7  | E . '/' E

    '+'  shift, and go to state 14
    '-'  shift, and go to state 15
    '*'  shift, and go to state 16
    '/'  shift, and go to state 17
    ';'  shift, and go to state 18


State 12

    4 E: E . '+' E
    5  | E . '-' E
    6  | E . '*' E
    7  | E . '/' E
    8  | '-' E .

    $default  reduce using rule 8 (E)


State 13

    4 E: E . '+' E
    5  | E . '-' E
    6  | E . '*' E
    7  | E . '/' E
   11  | '(' E . ')'

    '+'  shift, and go to state 14
    '-'  shift, and go to state 15
    '*'  shift, and go to state 16
    '/'  shift, and go to state 17
    ')'  shift, and go to state 19


State 14

    4 E: E '+' . E

    T_IntConstant  shift, and go to state 7
    T_Identifier   shift, and go to state 8
    '-'            shift, and go to state 9
    '('            shift, and go to state 10

    E  转到状态 20


State 15

    5 E: E '-' . E

    T_IntConstant  shift, and go to state 7
    T_Identifier   shift, and go to state 8
    '-'            shift, and go to state 9
    '('            shift, and go to state 10

    E  转到状态 21


State 16

    6 E: E '*' . E

    T_IntConstant  shift, and go to state 7
    T_Identifier   shift, and go to state 8
    '-'            shift, and go to state 9
    '('            shift, and go to state 10

    E  转到状态 22


State 17

    7 E: E '/' . E

    T_IntConstant  shift, and go to state 7
    T_Identifier   shift, and go to state 8
    '-'            shift, and go to state 9
    '('            shift, and go to state 10

    E  转到状态 23


State 18

    3 Stmt: T_Identifier '=' E ';' .

    $default  reduce using rule 3 (Stmt)


State 19

   11 E: '(' E ')' .

    $default  reduce using rule 11 (E)


State 20

    4 E: E . '+' E
    4  | E '+' E .
    5  | E . '-' E
    6  | E . '*' E
    7  | E . '/' E

    '*'  shift, and go to state 16
    '/'  shift, and go to state 17

    $default  reduce using rule 4 (E)


State 21

    4 E: E . '+' E
    5  | E . '-' E
    5  | E '-' E .
    6  | E . '*' E
    7  | E . '/' E

    '*'  shift, and go to state 16
    '/'  shift, and go to state 17

    $default  reduce using rule 5 (E)


State 22

    4 E: E . '+' E
    5  | E . '-' E
    6  | E . '*' E
    6  | E '*' E .
    7  | E . '/' E

    $default  reduce using rule 6 (E)


State 23

    4 E: E . '+' E
    5  | E . '-' E
    6  | E . '*' E
    7  | E . '/' E
    7  | E '/' E .

    $default  reduce using rule 7 (E)
